Add sync-to-remote-thermostat feature
- Added confs/sync-to-remote-thermostat.yaml: Automatically sync room temperature from CN105 to CNRF remote thermostat via REST API
- Added docs/sync-to-remote-thermostat.md: Complete documentation including setup, configuration, and build instructions
- Added ecodan-esphome-with-sync.yaml: Example configuration with sync feature enabled, English labels, and Zone 1+2 support
- Updated all 11 language label files with sync-related translations (EN fully translated, NL translated, others use English placeholders)

Features:
- Real-time temperature sync via HTTP POST
- Web UI configuration (IP, zone, room ID, interval)
- Support for Zone 1 and Zone 2
- Periodic fallback sync
- Default OFF for safety
- Complete multi-language support

--- a/confs/ecodan-labels-de.yaml
+++ b/confs/ecodan-labels-de.yaml
@@ -152,4 +152,10 @@ substitutions:
   total_increasing_cool_consumed: Gesamtverbrauch Kühlen
   total_increasing_cool_delivered: Gesamtertrag Kühlen
   total_increasing_dhw_consumed: Gesamtverbrauch Warmwasser
-  total_increasing_dhw_delivered: Gesamtertrag Warmwasser
+  total_increasing_dhw_delivered: Gesamtertrag Warmwasser  # sync to remote thermostat translations
+  sync_remote_thermostat_ip: Remote Thermostat IP
+  sync_remote_room_id: Remote Room ID
+  sync_interval_seconds: Sync Interval (seconds)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync to Remote Thermostat
+  sync_last_synced_temp: Last Synced Temperature
