--- a/confs/ecodan-labels-fi.yaml
+++ b/confs/ecodan-labels-fi.yaml
@@ -153,4 +153,10 @@ substitutions:
   total_increasing_cool_consumed: Kokonaiskulutus Jäähdytys
   total_increasing_cool_delivered: Kokonaistuotto Jäähdytys
   total_increasing_dhw_consumed: Kokonaiskulutus Lämmin Vesi
-  total_increasing_dhw_delivered: Kokonaistuotto Lämmin Vesi
+  total_increasing_dhw_delivered: Kokonaistuotto Lämmin Vesi  # sync to remote thermostat translations
+  sync_remote_thermostat_ip: Remote Thermostat IP
+  sync_remote_room_id: Remote Room ID
+  sync_interval_seconds: Sync Interval (seconds)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync to Remote Thermostat
+  sync_last_synced_temp: Last Synced Temperature
