--- a/confs/ecodan-labels-fr.yaml
+++ b/confs/ecodan-labels-fr.yaml
@@ -153,4 +153,10 @@ substitutions:
   total_increasing_cool_consumed: Consommation Totale Refroidissement
   total_increasing_cool_delivered: Production Totale Refroidissement
   total_increasing_dhw_consumed: Consommation Totale ECS
-  total_increasing_dhw_delivered: Production Totale ECS
+  total_increasing_dhw_delivered: Production Totale ECS  # sync to remote thermostat translations
+  sync_remote_thermostat_ip: Remote Thermostat IP
+  sync_remote_room_id: Remote Room ID
+  sync_interval_seconds: Sync Interval (seconds)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync to Remote Thermostat
+  sync_last_synced_temp: Last Synced Temperature
