--- a/confs/ecodan-labels-it.yaml
+++ b/confs/ecodan-labels-it.yaml
@@ -153,4 +153,10 @@ substitutions:
   total_increasing_cool_consumed: Consumo Totale Raffrescamento
   total_increasing_cool_delivered: Energia Totale Prodotta Raffrescamento
   total_increasing_dhw_consumed: Consumo Totale ACS
-  total_increasing_dhw_delivered: Energia Totale Prodotta ACS
+  total_increasing_dhw_delivered: Energia Totale Prodotta ACS  # sync to remote thermostat translations
+  sync_remote_thermostat_ip: Remote Thermostat IP
+  sync_remote_room_id: Remote Room ID
+  sync_interval_seconds: Sync Interval (seconds)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync to Remote Thermostat
+  sync_last_synced_temp: Last Synced Temperature
