--- a/confs/ecodan-labels-nl.yaml
+++ b/confs/ecodan-labels-nl.yaml
@@ -154,3 +154,10 @@ substitutions:
   total_increasing_cool_delivered: Totaal Geleverd Koeling
   total_increasing_dhw_consumed: Totaal Verbruik Tapwater
   total_increasing_dhw_delivered: Totaal Geleverd Tapwater
+  # sync naar externe thermostaat vertalingen
+  sync_remote_thermostat_ip: Externe Thermostaat IP
+  sync_remote_room_id: Externe Kamer ID
+  sync_interval_seconds: Sync Interval (seconden)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync naar Externe Thermostaat
+  sync_last_synced_temp: Laatst Gesynchroniseerde Temperatuur
