--- a/confs/ecodan-labels-sv.yaml
+++ b/confs/ecodan-labels-sv.yaml
@@ -153,4 +153,10 @@ substitutions:
   total_increasing_cool_consumed: Totalförbrukning Kyla
   total_increasing_cool_delivered: Total Levererad Kyla
   total_increasing_dhw_consumed: Totalförbrukning Varmvatten
-  total_increasing_dhw_delivered: Total Levererat Varmvatten
+  total_increasing_dhw_delivered: Total Levererat Varmvatten  # sync to remote thermostat translations
+  sync_remote_thermostat_ip: Remote Thermostat IP
+  sync_remote_room_id: Remote Room ID
+  sync_interval_seconds: Sync Interval (seconds)
+  sync_zone_selector: Sync Zone
+  sync_to_remote_enabled: Sync to Remote Thermostat
+  sync_last_synced_temp: Last Synced Temperature
