--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -3,10 +3,10 @@ substitutions:
   friendlyName: Ecodan heatpump
 
 # enable ota update via http request
-# id is required for sync-to-remote-thermostat feature
+# IMPORTANT: id is required for sync-to-remote-thermostat feature!
 http_request:
   buffer_size_tx: 20248
-  id: http_request_component
+  id: http_request_component  # Required for sync feature to work
 
 ota:
   - platform: esphome
@@ -48,6 +48,7 @@ api:
 #  wifi: !include confs/wifi.yaml
 #  energy: !include confs/energy.yaml
 #  #svc: !include confs/server-control-z1.yaml
+#  sync_thermostat: !include confs/sync-to-remote-thermostat.yaml  # NEW: temperature sync feature
 
 external_components:
   - source: github://Zjemm/esphome-ecodan-hp@main
@@ -69,10 +70,10 @@ packages:
             #confs/esp32s3-led.yaml,    # atom s3 status leds
             confs/zone1.yaml,
             confs/server-control-z1.yaml,
-            ## enable if you want to use zone 2
-            #confs/zone2.yaml,
-            #confs/server-control-z2.yaml,
-            ## enable label language files
+            ## Zone 2 enabled
+            confs/zone2.yaml,
+            confs/server-control-z2.yaml,
+            ## English labels enabled
             confs/ecodan-labels-en.yaml,  # English
             # confs/ecodan-labels-nl.yaml,  # Dutch
             # confs/ecodan-labels-it.yaml,  # Italian
@@ -84,7 +85,8 @@ packages:
             # confs/ecodan-labels-da.yaml,  # Danish
             # confs/ecodan-labels-pl.yaml,  # Polish
             confs/debug.yaml,
-            confs/wifi.yaml
+            confs/wifi.yaml,
+            confs/sync-to-remote-thermostat.yaml  # NEW: temperature sync feature
            ]
 
 # enable logger
