Enable name_add_mac_suffix for multiple ESP support
- Added esphome.name_add_mac_suffix: true in both YAML files
- Prevents naming conflicts when running multiple ESPs
- Each ESP will get unique name with MAC suffix

--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -20,8 +20,8 @@ api:
 #    key: !secret heatpump_encryption_key
 
 # uncomment if you have multiple esp running
-# esphome:
-#   name_add_mac_suffix: true
+esphome:
+  name_add_mac_suffix: true
 
 # external_components:
 # - source:
