--- a/ecodan-esphome.yaml
+++ b/ecodan-esphome.yaml
@@ -20,8 +20,8 @@ api:
 #    key: !secret heatpump_encryption_key
 
 # uncomment if you have multiple esp running
-# esphome:
-#   name_add_mac_suffix: true
+esphome:
+  name_add_mac_suffix: true
 
 # external_components:
 # - source:
