Use wifi-ota.yaml for OTA-friendly builds
- Changed from wifi.yaml to wifi-ota.yaml
- No secrets.yaml required for compilation
- OTA updates preserve existing WiFi settings
- Fresh installs start in hotspot mode for configuration

--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -85,7 +85,7 @@ packages:
             # confs/ecodan-labels-da.yaml,  # Danish
             # confs/ecodan-labels-pl.yaml,  # Polish
             confs/debug.yaml,
-            confs/wifi.yaml,
+            confs/wifi-ota.yaml,  # OTA-friendly: no hardcoded WiFi, preserves existing settings
             confs/sync-to-remote-thermostat.yaml  # NEW: temperature sync feature
            ]
 
