Fix resource exhaustion - add HTTP request timeout
- Added 5s timeout to http_request component
- Prevents connection leaks causing 'too many open files' error (errno 23)
- Fixes Web UI becoming unresponsive after a few minutes
- Ensures connections are properly closed after sync POST requests
- Timeout acts as safety net for slow/unresponsive remote devices

--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -7,6 +7,7 @@ substitutions:
 http_request:
   buffer_size_tx: 20248
   id: http_request_component  # Required for sync feature to work
+  timeout: 5s  # Force connection close after 5 seconds
 
 ota:
   - platform: esphome
