--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -3,11 +3,11 @@ substitutions:
   friendlyName: Ecodan heatpump
 
 # enable ota update via http request
-# IMPORTANT: id is required for sync-to-remote-thermostat feature!
+# timeout prevents connection hangs when remote device is slow/unresponsive
 http_request:
   buffer_size_tx: 20248
-  id: http_request_component  # Required for sync feature to work
-  timeout: 5s  # Force connection close after 5 seconds
+  timeout: 5s  # Prevent connection hangs
+  verify_ssl: false  # Required for ESP32 Arduino framework
 
 ota:
   - platform: esphome
