CRITICAL: Add watchdog_timeout to prevent ESP reboot during HTTP requests
The issue: HTTP requests in ESPHome are BLOCKING operations that pause
the main loop for 1-5 seconds. This causes the watchdog timer to expire
and reboot the ESP.

The solution: ESPHome's http_request component has a watchdog_timeout
parameter specifically for this purpose. From the documentation:
'Change the watchdog timeout during connection/data transfer. May be
useful on slow connections or connections with high latency.'

Added: watchdog_timeout: 10s

This gives the HTTP request enough time to complete (up to 5s timeout
+ network overhead) without triggering the watchdog reboot.

This is the proper ESPHome way to handle blocking HTTP operations.

--- a/ecodan-esphome-with-sync.yaml
+++ b/ecodan-esphome-with-sync.yaml
@@ -4,10 +4,12 @@ substitutions:
 
 # enable ota update via http request
 # timeout prevents connection hangs when remote device is slow/unresponsive
+# watchdog_timeout prevents ESP reboot during HTTP requests
 http_request:
   buffer_size_tx: 20248
   timeout: 5s  # Prevent connection hangs
   verify_ssl: false  # Required for ESP32 Arduino framework
+  watchdog_timeout: 10s  # Prevent watchdog reboot during HTTP operations
 
 ota:
   - platform: esphome
