--- a/ecodan-esphome.yaml
+++ b/ecodan-esphome.yaml
@@ -7,6 +7,7 @@ http_request:
   buffer_size_tx: 20248
   timeout: 5s  # Prevent connection hangs
   verify_ssl: false  # Required for ESP32 Arduino framework
+  watchdog_timeout: 10s  # Prevent watchdog reboot during HTTP operations
 
 ota:
   - platform: esphome
